index.html updated and obrigado.html created

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             Kli><a href="#games">Jogos</a></li>
             <li><a href="#subscribe">Inscreva-se</a></li>
             <img src="img/user.png" alt="user"
-            width="23.27" height="23.27">
+            width="36" height="36">
           </ul>
         </div>
       </nav>
@@ -52,7 +52,7 @@
             Vitae perspiciatis voluptatem sequi nostrum necessitatibus culpa
             fuga ...
           </p>
-          <a href="">Ler mais...</a>
+          <a href="https://pt.wikipedia.org/wiki/Lorem_ipsum">Ler mais...</a>
         </div>
         <div>
           <h3>Título principal da notícia</h3>
@@ -80,7 +80,7 @@
             Vitae perspiciatis voluptatem sequi nostrum necessitatibus culpa
             fuga ...
           </p>
-          <a href="">Ler mais...</a>
+          <a href="https://pt.wikipedia.org/wiki/Lorem_ipsum">Ler mais...</a>
         </div>
         <>botão carregar mais<>
       </section>
@@ -92,7 +92,7 @@
           <div>
             <h3>Horizon Forbidden West</h3>
             <p>De Sony Interactive Entertainment</p>
-            <p>9.7</p>
+            <h2>9.7</h2>
           </div>
         </div>
         <div>
@@ -101,7 +101,7 @@
           <div>
             <h3>Horizon Forbidden West</h3>
             <p>De Sony Interactive Entertainment</p>
-            <p>9.7</p>
+            <h2>9.7</h2>
           </div>
         </div>
         <div>
@@ -110,13 +110,41 @@
           <div>
             <h3>Horizon Forbidden West</h3>
             <p>De Sony Interactive Entertainment</p>
-            <p>9.7</p>
+            <h2>9.7</h2>
           </div>
         </div>
       </section>
       <section id="subscribe">
         <h2>Faça sua inscrição</h2>
-        <div></div>
+        <form action="obrigado.html">
+          <div>
+            <input type="text" placeholder="Nome completo">
+          </div><br>
+          <div>
+            <input type="text" placeholder="email">
+          </div><br>
+          <div>
+            <label for="plataform">Qual sua plataforma preferida?</label>
+            <div id="plataform">
+              <input type="radio" name="preference" id="platformPC">
+              <label for="namePC">PC</label><br>
+              <input type="radio" name="preference" id="platformXbox">
+              <label for="nameXbox">Xbox</label><br>
+              <input type="radio" name="preference" id="platformPlay">
+              <label for="namePlay">Playstation</label>
+            </div>
+          </div><br>  
+          <div for="notifications">
+            <input id="notifications" name="notification" type="checkbox">
+            <label for="notifications">Deseja receber novidades.</label>  
+          </div><br>
+          <div>
+            <input type="submit" value="Enviar">
+          </div><br>
+          <div>
+            <input type="reset" value="Limpar">
+          </div><br>
+        </form>
       </section>
     </main>
     <footer>
@@ -124,7 +152,7 @@
         <address>
           <a href="">@dsplaygames</a>
         </address>
-        <!-- ver como usar o mailto-->
+        <!-- na videoaula, ver como usar o mailto-->
         <a href="#dsPlayGames">/dsplaygames</a>
       </div>
       <div>
