--- a/index.html
+++ b/index.html
@@ -15,14 +15,16 @@
         <div>
           <ul>
             <li><a href="#news">Notícias</a></li>
-            Kli><a href="#games">Jogos</a></li>
+            <li><a href="#games">Jogos</a></li>
             <li><a href="#subscribe">Inscreva-se</a></li>
             <img src="img/user.png" alt="user"
             width="36" height="36">
           </ul>
         </div>
       </nav>
+      <hr>
     </header>
+    <br>
     <main>
       <section id="news">
         <h2>Últimas notícias</h2>
@@ -32,6 +34,7 @@
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto
             vitae ducimus aperiam.
           </h4>
+          <hr>
           <p>23/02/2022</p>
           <p>
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto
@@ -53,6 +56,7 @@
             fuga ...
           </p>
           <a href="https://pt.wikipedia.org/wiki/Lorem_ipsum">Ler mais...</a>
+          <hr>
         </div>
         <div>
           <h3>Título principal da notícia</h3>
@@ -60,6 +64,7 @@
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto
             vitae ducimus aperiam.
           </h4>
+          <hr>
           <p>23/02/2022</p>
           <p>
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto
@@ -80,11 +85,13 @@
             Vitae perspiciatis voluptatem sequi nostrum necessitatibus culpa
             fuga ...
           </p>
+          <hr>
           <a href="https://pt.wikipedia.org/wiki/Lorem_ipsum">Ler mais...</a>
-        </div>
-        <>botão carregar mais<>
+        </div><br>
+        <a href="https://support.microsoft.com/pt-br/topic/descri%C3%A7%C3%A3o-do-texto-lorem-ipsum-dolor-sit-amet-que-aparece-na-ajuda-do-windows-bf3b0a9e-8f6b-c2ab-edd9-41c1f9aa2ea0"><input type="submit" value="Carregar mais"></a>
       </section>
       <section id="games">
+        <br>
         <h2>Jogos</h2>
         <div>
           <img src="img/game.png" alt="Horizon Forbidden West"
@@ -116,7 +123,7 @@
       </section>
       <section id="subscribe">
         <h2>Faça sua inscrição</h2>
-        <form action="obrigado.html">
+        <form> <!-- arquivo para o qual se poderia ir ao clicar em enviar, a partir do comando action="obrigado.html" obrigado.html-->
           <div>
             <input type="text" placeholder="Nome completo">
           </div><br>
@@ -147,11 +154,12 @@
         </form>
       </section>
     </main>
+    <hr>
     <footer>
       <div>
         <address>
           <a href="">@dsplaygames</a>
-        </address>
+        </address><!--mailto:endereço@gmail.com: para colocar dentro de href=""-->
         <!-- na videoaula, ver como usar o mailto-->
         <a href="#dsPlayGames">/dsplaygames</a>
       </div>
@@ -159,8 +167,8 @@
         <p>DS Play Games Ltda. Todos direitos reservados</p>
       </div>
       <div>
-        <a href="">Política de privacidade</a>
-        <a href="">Termos de uso</a>
+        <a href="">Política de privacidade</a><!--link para arquivo com as políticas-->
+        <a href="">Termos de uso</a><!--link para os termos-->
       </div>
     </footer>
   </body>
