final project, cap. 2

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <header id="dsPlayGames">
-      <nav>
+      <nav> <!--obs.: professor, acabei deixando este link acima-->
         <div>
           <h1>DSPlayGames</h1>
         </div>
@@ -55,7 +55,7 @@
             Vitae perspiciatis voluptatem sequi nostrum necessitatibus culpa
             fuga ...
           </p>
-          <a href="https://pt.wikipedia.org/wiki/Lorem_ipsum">Ler mais...</a>
+          <a href="#">Ler mais...</a>
           <hr>
         </div>
         <div>
@@ -86,9 +86,11 @@
             fuga ...
           </p>
           <hr>
-          <a href="https://pt.wikipedia.org/wiki/Lorem_ipsum">Ler mais...</a>
+          <a href="#">Ler mais...</a>
         </div><br>
-        <a href="https://support.microsoft.com/pt-br/topic/descri%C3%A7%C3%A3o-do-texto-lorem-ipsum-dolor-sit-amet-que-aparece-na-ajuda-do-windows-bf3b0a9e-8f6b-c2ab-edd9-41c1f9aa2ea0"><input type="submit" value="Carregar mais"></a>
+        <div>
+          <input type="submit" value="Carregar mais">
+        </div>
       </section>
       <section id="games">
         <br>
@@ -158,17 +160,20 @@
     <footer>
       <div>
         <address>
-          <a href="">@dsplaygames</a>
-        </address><!--mailto:endereço@gmail.com: para colocar dentro de href=""-->
-        <!-- na videoaula, ver como usar o mailto-->
+          <a href="#">@dsplaygames</a>
+        </address>
         <a href="#dsPlayGames">/dsplaygames</a>
       </div>
       <div>
         <p>DS Play Games Ltda. Todos direitos reservados</p>
       </div>
       <div>
-        <a href="">Política de privacidade</a><!--link para arquivo com as políticas-->
-        <a href="">Termos de uso</a><!--link para os termos-->
+        <div>
+          <a href="#">Política de privacidade</a>
+        </div>
+        <div>
+          <a href="#">Termos de uso</a>
+        </div>
       </div>
     </footer>
   </body>
