--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
       </section>
       <section id="subscribe">
         <h2>Faça sua inscrição</h2>
-        <form> <!-- arquivo para o qual se poderia ir ao clicar em enviar, a partir do comando action="obrigado.html" obrigado.html-->
+        <form>
           <div>
             <input type="text" placeholder="Nome completo">
           </div><br>
